--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,26 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
+
 @import url('./reset.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
+  color: #808080;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+body {
+  padding: 36px;
+  background-color: #FFFFFF;
+}
+.search-form {
+  text-align: center;
+  margin-bottom: 32px;
 }
 input {
   padding: 8px 16px;
@@ -28,13 +29,15 @@ input {
   width: 272px;
   max-height: 40px;
   flex-shrink: 0;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
   letter-spacing: 0.64px; 
-  margin-top: 36px;
-  margin-right: 8px;
+  margin-right: 8px; 
+}
+input:hover {
+  border: 1px solid #000000;
+}
+
+input:focus {
+  border: 1px solid #4E75FF;
 }
 button {
   padding: 8px 16px;
@@ -44,36 +47,53 @@ button {
   border-radius: 8px;
   background: #4E75FF;
   color: #FFF;
-  font-family: Montserrat;
-  font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
   letter-spacing: 0.64px;
   width: 90px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-form {
-  text-align: center;
+button:hover {
+  opacity: 0.8;
+  background-color: #6C8CFF;
+  border: 1px solid #6C8CFF;
 }
+.btn {
+  width: 125px;
+  max-height: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.btn.is-hidden {
+  display: none;
+}
+.spinner.is-hidden {
+  display: none;
+}
+.loader {
+ 
+  text-align: center; 
+  color: #2E2F42;;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 
-
+}
 .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.gallery a {
-  margin: 10px;
-  text-decoration: none;
-  color: inherit;
+  margin-bottom: 32px;
+  gap: 24px;
 }
 
 .gallery img {
-  width: 200px;
-  height: auto;
-  border-radius: 5px;
+  width: 360px;
+  height: 200px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -81,57 +101,11 @@ form {
   transform: scale(1.1);
 }
 
-.gallery-item {
-  border: 1px solid #000000;
+#load-more {
+  background-color: #4E75FF;
+  border: #4E75FF;
 }
 
-.image-info {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 5px;
-  border-radius: 5px;
-  text-align: center;
-  margin-top: 5px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.img-info-item {
-  display: flex;
-  flex-direction: column;
-  font-size: 10px;
-}
-#loader {
-  color: black;
+.is-loading {
   display: inline-block;
-  position: relative;
-  box-sizing: border-box;
 }
-
-#loader::after {
-  content: '';
-  width: 5px;
-  height: 5px;
-  background: currentColor;
-  position: absolute;
-  bottom: 10px;
-  right: -5px;
-  box-sizing: border-box;
-  animation: animloader 1s linear infinite;
-}
-
-@keyframes animloader {
-  0% {
-    box-shadow: 10px 0 rgba(255, 255, 255, 0), 20px 0 rgba(255, 255, 255, 0);
-  }
-
-  50% {
-    box-shadow: 10px 0 white, 20px 0 rgba(255, 255, 255, 0);
-  }
-
-  100% {
-    box-shadow: 10px 0 white, 20px 0 white;
-  }
-}
-
-
- 
